--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     testCompile 'junit:junit:4.12'
+    compile files('src/main/libs/glide-3.6.0.jar')
     compile project(':kk-app')
 }
