--- a/demo/settings.gradle
+++ b/demo/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':kk-app', ':kk-view', ':kk-script', ':kk-duktape', ':kk-observer'
+include ':app', ':kk-app', ':kk-view', ':kk-script', ':kk-duktape', ':kk-observer', ':kk-http'
