--- a/kk-app/build.gradle
+++ b/kk-app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile project(':kk-script')
     compile project(':kk-duktape')
     compile project(':kk-observer')
+    compile project(':kk-http')
 }
