--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile files('src/main/libs/ninepatch-1.0.jar')
     compile project(':kk-app')
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-
+    compile project(':kk-http-client')
 }
