--- a/kk-app/build.gradle
+++ b/kk-app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile project(':kk-duktape')
     compile project(':kk-observer')
     compile project(':kk-http')
+    compile project(':kk-image')
 }
