--- a/demo/app/src/main/AndroidManifest.xml
+++ b/demo/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape"
             android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
