--- a/kk-app/build.gradle
+++ b/kk-app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion COMPILE_SDK_VERSION as int
+    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 25
+        minSdkVersion MIN_SDK_VERSION as int
+        targetSdkVersion TARGET_SDK_VERSION as int
         versionCode 1
         versionName "1.0"
 
@@ -20,6 +22,17 @@ android {
         }
     }
 
+    repositories {
+        maven { url "http://artifactory.client.weibo.cn/artifactory/android_lib_aars/" }
+        maven { url "http://artifactory.client.weibo.cn/artifactory/ext-release-local/" }
+        jcenter()
+    }
+
+}
+
+configurations.all {
+    // check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 dependencies {
@@ -27,12 +40,35 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    provided 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile project(':kk-view')
-    compile project(':kk-script')
-    compile project(':kk-duktape')
-    compile project(':kk-observer')
-    compile project(':kk-http')
-    compile project(':kk-image')
+//    compile project(':kk-view')
+//    compile project(':kk-script')
+//    compile project(':kk-duktape')
+//    compile project(':kk-observer')
+//    compile project(':kk-http')
+//    compile project(':kk-image')
+    compile 'com.sina.weibo.lib.kk:view:' + CURRENTVERSION
+    compile 'com.sina.weibo.lib.kk:script:' + CURRENTVERSION
+    compile 'com.sina.weibo.lib.kk:duktape:' + CURRENTVERSION
+    compile 'com.sina.weibo.lib.kk:observer:' + CURRENTVERSION
+    compile 'com.sina.weibo.lib.kk:http:' + CURRENTVERSION
+    compile 'com.sina.weibo.lib.kk:image:' + CURRENTVERSION
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: MAVEN_REPO_RELEASE_URL) {
+                authentication(userName: USERNAME, password: PASSWORD)
+            }
+            pom.project {
+                version DEPENDENCIESVERSION
+                artifactId 'app'
+                groupId GROUPID
+                packaging TYPE
+                description DESCRIPTION
+            }
+        }
+    }
 }
