--- a/demo/gradle.properties
+++ b/demo/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Mar 21 11:33:25 CST 2018
-systemProp.http.proxyHost=mirrors.neusoft.edu.cn
+#Sun May 13 08:09:15 CST 2018
+systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=80
+systemProp.http.proxyPort=1086
