--- a/kk-app/src/main/AndroidManifest.xml
+++ b/kk-app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity
+            android:theme="@style/DialogActivity"
+            android:name=".WindowActivity" android:configChanges="orientation">
+        </activity>
     </application>
 
 </manifest>
