--- a/kk-app/src/main/AndroidManifest.xml
+++ b/kk-app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:theme="@style/DialogActivity"
+            android:theme="@style/KKWindowActivity"
             android:name=".WindowActivity" android:configChanges="orientation">
         </activity>
     </application>
