--- a/kk-app/src/main/AndroidManifest.xml
+++ b/kk-app/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
     package="cn.kkmofang.app">
 
     <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
-        <activity
-            android:theme="@style/KKWindowActivity"
-            android:name=".WindowActivity" android:configChanges="orientation">
-        </activity>
-    </application>
+        android:supportsRtl="true"></application>
 
 </manifest>
